src/content/docs/ja/sdk/react-native/v4/features/att.mdx
---
title: App Tracking Transparencyの設定
description: AppleのApp Tracking Transparencyフレームワークを使用するようにアプリを設定する
slug: ja/sdk/react-native/v4/features/att
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /ja/sdk/react-native/features/att
---

広告識別子（IDFA）を記録したい場合は、ユーザーの許諾を得るためのプロンプトを表示する必要があります。これを行うには、アプリにAppleのApp Tracking Transparency（ATT）frameworkを組み込む必要があります。Adjust SDKはユーザーの許諾状況を保存し、リクエストごとにAdjustサーバーに送信します。

## 承認ステータス {#authorization-statuses}

| ステータス（Status）                                | コード | 説明                                                             |
| --------------------------------------------------- | ------ | ---------------------------------------------------------------- |
| `ATTrackingManagerAuthorizationStatusNotDetermined` | `0`    | ユーザーがアクセスプロンプトに応答していない。                   |
| `ATTrackingManagerAuthorizationStatusRestricted`    | `1`    | アプリ関連データへのアクセスがデバイスレベルでブロックされている |
| `ATTrackingManagerAuthorizationStatusDenied`        | `2`    | ユーザーがデバイス計測によるアプリ関連データへのアクセスを拒否   |
| `ATTrackingManagerAuthorizationStatusAuthorized`    | `3`    | ユーザーがデバイス計測によるアプリ関連データへのアクセスを承認   |

<Callout type="note">

SDKがATT（AppTrackingTransparency）ステータスを取得できない場合、`-1`のステータスコードを受け取る可能性があります。

</Callout>

## ATT承認ラッパー {#att-authorization-wrapper}

<CodeBlock title="メソッドシグネチャー">

```ts
requestTrackingAuthorizationWithCompletionHandler: (handler: (status: number) => void) => void
```

</CodeBlock>

Adjust SDKには、[Appleの`requestTrackingAuthorizationWithCompletionHandler`メソッドのラッパーが含まれています](https://developer.apple.com/documentation/apptrackingtransparency/attrackingmanager/3547037-requesttrackingauthorizationwith)。ATTプロンプトをカスタマイズしない場合は、このラッパーを使用することができます。

コールバックメソッドは、ユーザーが同意ダイアログに応答した時にトリガーされ、ユーザーの同意ステータスコードをAdjustサーバーに送信します。コールバック関数内で各ステータスコードに対するレスポンスを定義することができます。

ATTのテキスト内容を指定する必要があります。これを行うには、`Info.plist`ファイルで`NSUserTrackingUsageDescription`キーにテキストを追加してください。

<Callout type="tip">

Adjust SDKは、カスタムプロンプトを使用した場合、同意ステータスも記録します。初期化前にプロンプトを表示した場合、SDKはインストールイベントと共にステータスを送信します。プロンプトを初期化後に表示した場合は、SDKはユーザーが更新した後に、即時にAdjustサーバーにステータスを送信します。

</Callout>

```jsx
Adjust.requestTrackingAuthorizationWithCompletionHandler(function (status) {
   switch (status) {
      case 0:
         // ATTrackingManagerAuthorizationStatusNotDetermined case
         break;
      case 1:
         // ATTrackingManagerAuthorizationStatusRestricted case
         break;
      case 2:
         // ATTrackingManagerAuthorizationStatusDenied case
         break;
      case 3:
         // ATTrackingManagerAuthorizationStatusAuthorized case
         break;
   }
});
```

### 例 {#example}

この例では、ユーザーがプロンプトと対話したときに、ユーザーの認証状態について人間が読み取れる説明をログに記録する方法を示しています。

```jsx
Adjust.requestTrackingAuthorizationWithCompletionHandler(function (status) {
   switch (status) {
      case 0:
         console.log("The user has not responded to the access prompt yet.");
         break;
      case 1:
         console.log(
            "Access to app-related data is blocked at the device level.",
         );
         break;
      case 2:
         console.log(
            "The user has denied access to app-related data for device measurement.",
         );
         break;
      case 3:
         console.log(
            "The user has approved access to app-related data for device measurement.",
         );
         break;
   }
});
```

## 現在の承認ステータスを取得 {#get-current-authorization-status}

<CodeBlock title="メソッドシグネチャー">

```ts
getAppTrackingAuthorizationStatus: (callback: (authorizationStatus: number) => void) => void
```

</CodeBlock>

ユーザーの現在の認証ステータスはいつでも取得することができます。`getAppTrackingAuthorizationStatus`メソッドを呼び出し、`number`で認証ステータスコードを返してください。

```jsx
Adjust.getAppTrackingAuthorizationStatus();
```

### 例 {#example-1}

この例では、ユーザーの認証ステータスを収集し、`string`に変換する方法を示しています。この情報は`authorizationStatus`という変数に割り当てられ、`"status"`というキーでセッション パートナー パラメーターとしてパスされます。

```jsx
var authorizationStatus = String(Adjust.getAppTrackingAuthorizationStatus());
Adjust.addSessionPartnerParameter("status", authorizationStatus);
```

## 承認ステータスの変更を確認する {#check-for-authorization-status-changes}

<CodeBlock title="メソッドシグネチャー">

```ts
checkForNewAttStatus: () => void
```

</CodeBlock>

カスタムATTプロンプトを使用する場合、ユーザーの認証ステータスに変更があった場合、Adjust SDKに通知する必要があります。`checkForNewAttStatus`メソッドを呼び出し、Adjustサーバーに認証ステータスを送信してください。

```jsx
Adjust.checkForNewAttStatus();
```

## プロンプトのタイミングをカスタム設定 {#custom-prompt-timing}

<CodeBlock title="メソッドシグネチャー">

```js
AdjustConfig.prototype.setAttConsentWaitingInterval = function(attConsentWaitingInterval);
```

</CodeBlock>

アプリにオンボーディングプロセスまたはチュートリアルが含まれる場合、ユーザーがこのプロセスを完了するまで、ユーザーのATT同意ステータスの送信を遅らせたい場合があります。これを行うには、`attConsentWaitingInterval`プロパティを設定して、データの送信を **最大120秒** 遅延させ、ユーザーに最初のオンボーディングを完了する時間を与えることができます。タイムアウトが終了した後、またはユーザーが同意ステータスを設定した後に、SDKはユーザーの同意ステータスと共に遅延中に記録した全ての情報をAdjustのサーバーに送信します。

<Callout type="note">

タイムアウトが終了する前、または同意ステータスを選択する前にユーザーがアプリを閉じた場合、アプリを再度開いたときにタイムアウトが再開されます。

</Callout>

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);
//...
adjustConfig.setAttConsentWaitingInterval(30);
//...
Adjust.create(adjustConfig);
```
